# localflow-mac

./: README-MAC.md  README.md  compile-mac.sh  pyproject.toml
docs/superpowers/specs/: 2026-07-06-auto-updater-design.md  2026-07-06-dictation-audio-mute-design.md
src/localflow/: __init__.py  app.py  config.py  ducking.py  mainwin.py  ui.py
tests/: test_ducking.py
